bk_ida/gobmkida/c1/list_goal_worms
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/engine/owl.c:5578:10: error: conflicting types for 'list_goal_worms'
__int64  list_goal_worms( struct local_owl_data *owl, int *goal_worm) 
         ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/engine/owl.c:220:12: note: previous declaration is here
static int list_goal_worms(struct local_owl_data *owl,
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/engine/owl.c:5599:12: error: expected expression
*( _OWORD *)&owl_goal_worm[11] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/engine/owl.c:5599:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&owl_goal_worm[11] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/engine/owl.c:5600:12: error: expected expression
*( _OWORD *)&owl_goal_worm[8] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/engine/owl.c:5600:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&owl_goal_worm[8] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/engine/owl.c:5601:12: error: expected expression
*( _OWORD *)&owl_goal_worm[4] = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/engine/owl.c:5601:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&owl_goal_worm[4] = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/engine/owl.c:5602:12: error: expected expression
*( _OWORD *)owl_goal_worm = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/engine/owl.c:5602:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)owl_goal_worm = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/engine/owl.c:5667:25: error: use of undeclared identifier 'dword_9B27F8'
result = ( unsigned int)dword_9B27F8[( unsigned __int64)( 5 * v20) / 4]; 
                        ^
10 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/list_goal_worms/src/obj/1/owl.o] Error 1
